Fixed scroll animation on mobile

--- a/src/styles/Global/app.scss
+++ b/src/styles/Global/app.scss
@@ -25,8 +25,13 @@ h3 {
   font-size: 4rem;
 }
 
+h2 {
+  @media (max-width: 500px) {
+    font-size: 2.5rem;
+  }
+}
 
-h4{
+h4 {
   font-family: 'Bebas Neue', sans-serif;
   font-size: 1.5rem;
 }
@@ -41,7 +46,7 @@ button {
   outline: inherit;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
@@ -61,5 +66,3 @@ a{
     }
   }
 }
-
-
