--- a/src/styles/Hero/glassButton.scss
+++ b/src/styles/Hero/glassButton.scss
@@ -1,3 +1,4 @@
+@import '../../styles/Global/app.scss';
 .glass-button {
   display: flex;
   justify-content: center;
@@ -13,7 +14,10 @@
   transition: 0.5s;
   border-radius: 5px;
   box-shadow: 0 0 10px white;
-
+  @include respond-to('small') {
+    width: 120px;
+    height: 50px;
+  }
   &::after {
     content: '';
     position: absolute;
@@ -58,4 +62,8 @@
   border-radius: 5px;
   opacity: 50%;
   cursor:auto;
+  @include respond-to('small') {
+    width: 120px;
+    height: 50px;
+  }
 }
