--- a/src/styles/Projects/project.scss
+++ b/src/styles/Projects/project.scss
@@ -22,39 +22,18 @@
       display: flex;
       gap: 3rem;
       @include respond-to('small') {
-        flex-direction: column;
-        gap: 1.5rem;
+        gap: 1rem;
       }
     }
   }
-  @include respond-to('small') {
-    padding-bottom: 10rem;
-  }
+
 }
 
 
 .project1 {
-  left: 40%;
-  @include respond-to('small') {
-    left: 30%;
-  }
-  @include respond-to('medium') {
-    left: 35%;
-  }
-  @include respond-to('large') {
-    left: 40%;
-  }
+  left: 100%;
 }
 .project2 {
-  left: 80%;
-  padding-bottom: 10rem;
-  @include respond-to('small') {
-    left: 65%;
-  }
-  @include respond-to('medium') {
-    left: 70%;
-  }
-  @include respond-to('large') {
-    left: 70%;
-  }
+  left: 100%;
+  margin-bottom: 10rem;
 }
