--- a/src/styles/Projects/projectImageWithTech.scss
+++ b/src/styles/Projects/projectImageWithTech.scss
@@ -21,6 +21,9 @@
       }
 
     }
+    @include respond-to('small') {
+      height: 40svh;
+    }
     @include respond-to('medium') {
       max-height: 50svh;
     }
@@ -52,6 +55,7 @@
     padding: 0.5rem 1rem;
     border-radius: 1.2rem;
     box-shadow: 0 0 3px white;
+    margin-right: 2rem;
   }
 }
 
